Add @serde annotation processor